@@ -1,3 +1,9 @@
+2004-03-21  Jeff Hobbs  <jeffh@ActiveState.com>
+
+	* win/tclWinInt.h: define VER_PLATFORM_WIN32_CE if not already set.
+	* win/tclWinInit.c (TclpSetInitialEncodings): recognize WIN32_CE
+	as a unicode (WCHAR) platform.
+
 2004-03-15  Miguel Sofer <msofer@users.sf.net>
 
 	* generic/tclCompile.c (TclCompileScript):
